--- a/OperatingSystem/가상 메모리.md
+++ b/OperatingSystem/가상 메모리.md
@@ -129,6 +129,18 @@ PageTable = 1 3 5 4
 
 위와 같은 과정으로 물리 주소를 참조하지만 매번 페이지 테이블을 이용하는 것은 매우 비효율적이기 때문에 TLB를 이용한다.
 
+## TLB(Translation Lookaside Buffer)
+
+- MMU에 소속된 칩으로, 자주 참조되는 가상 주소- 물리 주소 변환 정보를 저장해놓은 캐시이다.
+- 과정
+    1. 가상 주소로 접근 시, TLB에 먼저 접근하여 변환정보가 있는지 확인
+    2. 있으면 바로 반환
+    3. 없으면 Page Table에서 해당 물리 주소를 찾아 TLB에 갱신 후, TLB miss가 발생한 명령어를 재실행
+
+![7](https://user-images.githubusercontent.com/71375034/146927292-0b5fc823-a55b-474b-b7c7-3f056639a774.png)
+
+따라서 TLB의 hit rate가 속도에 많은 영향을 끼친다.
+
 # ⭐️ 예상 질문 리스트
 
 1. 가상 메모리를 사용하는 이유가 뭘까요?
