--- a/Development/함수형 프로그래밍.md
+++ b/Development/함수형 프로그래밍.md
@@ -203,6 +203,8 @@ console.log(add5(1)); // 6
 
 굳이 `add5` 함수를 선언하지 않고 `adder(5)(1)` 이런식으로 바로 호출할 수 있다.
 
+**함수의 재사용성과 코드의 가독성을 향상시킬 수 있다.**
+
 </br>
 
 # 객체지향 vs 함수형
